src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_acl_item__mz_format_privileges.snap
---
source: src/expr/src/scalar/func/impls/mz_acl_item.rs
expression: "#[sqlfunc(sqlname = \"mz_format_privileges\")]\nfn mz_format_privileges(privileges: String) -> Result<ArrayRustType<String>, EvalError> {\n    AclMode::from_str(&privileges)\n        .map(|acl_mode| {\n            ArrayRustType(\n                acl_mode\n                    .explode()\n                    .into_iter()\n                    .map(|privilege| privilege.to_string())\n                    .collect(),\n            )\n        })\n        .map_err(|e: anyhow::Error| EvalError::InvalidPrivileges(e.to_string().into()))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct MzFormatPrivileges;
impl crate::func::EagerUnaryFunc for MzFormatPrivileges {
    type Input<'a> = String;
    type Output<'a> = Result<ArrayRustType<String>, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        mz_format_privileges(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for MzFormatPrivileges {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("mz_format_privileges")
    }
}
fn mz_format_privileges(privileges: String) -> Result<ArrayRustType<String>, EvalError> {
    AclMode::from_str(&privileges)
        .map(|acl_mode| {
            ArrayRustType(
                acl_mode
                    .explode()
                    .into_iter()
                    .map(|privilege| privilege.to_string())
                    .collect(),
            )
        })
        .map_err(|e: anyhow::Error| EvalError::InvalidPrivileges(e.to_string().into()))
}
