src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_acl_item__mz_validate_privileges.snap
---
source: src/expr/src/scalar/func/impls/mz_acl_item.rs
expression: "#[sqlfunc(sqlname = \"mz_validate_privileges\")]\nfn mz_validate_privileges(privileges: String) -> Result<bool, EvalError> {\n    AclMode::parse_multiple_privileges(&privileges)\n        .map(|_| true)\n        .map_err(|e: anyhow::Error| EvalError::InvalidPrivileges(e.to_string().into()))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct MzValidatePrivileges;
impl crate::func::EagerUnaryFunc for MzValidatePrivileges {
    type Input<'a> = String;
    type Output<'a> = Result<bool, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        mz_validate_privileges(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for MzValidatePrivileges {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("mz_validate_privileges")
    }
}
fn mz_validate_privileges(privileges: String) -> Result<bool, EvalError> {
    AclMode::parse_multiple_privileges(&privileges)
        .map(|_| true)
        .map_err(|e: anyhow::Error| EvalError::InvalidPrivileges(e.to_string().into()))
}
